Renamed swagger doc and added task model
