# routes/index.js
@@ -1,5 +1,13 @@
-var express = require('express');
-var router = express.Router();
+const express = require('express');
+const router = express.Router();
+
+
+/* GET home page. */
+router.use("/users", require("./users.js"));
+router.use("/tasks", require("./tasks.js"));
+router.use("/breaks", require("./breaks.js"));
+router.use("/sessions", require("./sessions.js"));
+
 
 /* GET home page. */
 router.get('/', function(req, res, next) {
